--- a/docs/team/briyanii.adoc
+++ b/docs/team/briyanii.adoc
@@ -91,9 +91,7 @@ _{you can add/remove categories in the list above}_
 |===
 |_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
 |===
-
-include::../UserGuide.adoc[tag=brian]
-
+include::../UserGuide.adoc[tag=shortcuts]
 
 == Contributions to the Developer Guide
 
