--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -237,7 +237,7 @@ Classes used by multiple components are in the `[green]#seedu.addressbook.common
 
 This section describes some noteworthy details on how certain features are implemented. We have included our design considerations for you to understand our decision making processes.
 
-// tag::training[]
+// tag::training_structure[]
 === Training feature
 
 *Athletick* allows users to record training information like the date of training and an athlete's attendance. This
@@ -288,6 +288,8 @@ shows how the `TrainingManager` provides other components with attendance rates.
 .Sequence diagram showing how `view attendance` command gets attendance rate
 image::view_attendance_sequence_diagram.png[]
 
+// end::training_structure[]
+
 `[green]#TrainingManager#` also allows users to get the attendance of one particular training using the following
 operation:
 
@@ -298,6 +300,8 @@ when a `calendar` command is executed.
 
 .Sequence diagram showing how `calendar` command gets training attendance
 image::calendar_sequence_diagram.png[]
+
+// tag::training_design[]
 
 ==== Design Considerations
 This section contains some of our considerations for the training feature.
@@ -364,7 +368,7 @@ Reason for choosing alternative 1: Editing training information would require ty
 time-consuming and this defeats the purpose of having a command line interface. Editing training by replacing an old
 one with the `training` command makes it editing much quicker.
 
-// end::training[]
+// end::training_design[]
 === Performance feature
 
 Athletick allows users to record athlete's performance details from timed trials.
